# SYT-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/syt_bot/: env.py  main.py  secrets.py  stream.py  youtube.py
tests/: test_main.py
